--- a/tutorials/quickstart/beginner.ipynb
+++ b/tutorials/quickstart/beginner.ipynb
@@ -54,7 +54,7 @@
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,16 +129,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "0trJmd6DjqBZ",
-        "outputId": "83d49113-db1d-4eea-ec43-dfc86a9b13fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aab35891-b4f8-4684-9afb-5fca52f414bb"
       },
       "source": [
         "import tensorflow as tf\n",
         "print(\"TensorFlow version:\", tf.__version__)"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,18 +168,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "7FP5258xjs-v",
-        "outputId": "8b2520db-c3f0-4a02-dc66-03c4a3d8378c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8fe571e5-bbee-4e79-bb0a-818b8ae560bb"
       },
       "source": [
         "mnist = tf.keras.datasets.mnist\n",
+        "mnist\n",
         "\n",
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
         "x_train, x_test = x_train / 255.0, x_test / 255.0"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +217,7 @@
         "  tf.keras.layers.Dense(10)\n",
         "])"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -231,14 +232,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OeOrNdnkEEcR"
+        "id": "OeOrNdnkEEcR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d6123cda-14d7-4679-f269-2d57de9d5432"
       },
       "source": [
         "predictions = model(x_train[:1]).numpy()\n",
         "predictions"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.08644512, -0.6866243 , -0.17886266,  0.0820026 , -0.20975696,\n",
+              "        -0.11387712, -0.9450061 , -0.49788478, -0.0445087 , -0.01987837]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,13 +270,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zWSRnQ0WI5eq"
+        "id": "zWSRnQ0WI5eq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "32d63fb9-4c23-40fa-b757-ee7211735afa"
       },
       "source": [
         "tf.nn.softmax(predictions).numpy()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.11495626, 0.06307803, 0.10480843, 0.13604687, 0.10161996,\n",
+              "        0.11184565, 0.04871519, 0.076181  , 0.11987963, 0.12286897]],\n",
+              "      dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -286,7 +321,7 @@
       "source": [
         "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -303,13 +338,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NJWqEVrrJ7ZB"
+        "id": "NJWqEVrrJ7ZB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c9a2e64-f59c-4b6e-f8ab-ad393e7bd7e9"
       },
       "source": [
         "loss_fn(y_train[:1], predictions).numpy()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.1906354"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -330,7 +380,7 @@
         "              loss=loss_fn,\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -347,13 +397,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y7suUbJXVLqP"
+        "id": "y7suUbJXVLqP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "951a3788-99f8-4e6d-804e-354474a800d2"
       },
       "source": [
         "model.fit(x_train, y_train, epochs=5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.3004 - accuracy: 0.9128\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1446 - accuracy: 0.9570\n",
+            "Epoch 3/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1106 - accuracy: 0.9667\n",
+            "Epoch 4/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0910 - accuracy: 0.9718\n",
+            "Epoch 5/5\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0788 - accuracy: 0.9748\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f264f4e1050>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -367,13 +448,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F7dTAzgHDUh7"
+        "id": "F7dTAzgHDUh7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5c15ef74-bd2f-48b5-e792-b32058b8d7bc"
       },
       "source": [
         "model.evaluate(x_test,  y_test, verbose=2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 - 0s - loss: 0.0750 - accuracy: 0.9768\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.07503621280193329, 0.9768000245094299]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
